--- a/sources/set.web/Views/Shared/_Layout.cshtml
+++ b/sources/set.web/Views/Shared/_Layout.cshtml
@@ -3,70 +3,47 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>@ViewBag.Title - Set Meta</title>
+    <title>@ViewBag.Title / Set</title>
     <link rel="shortcut icon" href="/public/img/favicon.ico" />
-    <link rel="stylesheet" href="/public/css/boot.css?v=1" />
+    <link rel="stylesheet" href="//s.setcrm.com/css/boot.css?v=1" />
     <link rel="stylesheet" href="/public/css/app.css?v=1" />
+    @RenderSection("Css", false)
 </head>
 <body>
     <div class="navbar navbar-default">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
-            <a class="navbar-brand" href="/">Set Meta</a>
+            <a class="navbar-brand" href="/">Set</a>
         </div>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
             <ul class="nav navbar-nav">
                 @if (User.Identity.IsAuthenticated)
                 {
-                    if (User.Identity.GetRoleName() == ConstHelper.Admin)
-                    {
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">@Html.LocalizationString("menu_administration") <b class="caret"></b></a>
-                            <ul class="dropdown-menu">
-                                <li><a href="/admin/apps">@Html.LocalizationString("menu_settings_apps")</a></li>
-                                <li><a href="/admin/users">@Html.LocalizationString("menu_settings_users")</a></li>
-                                <li><a href="/admin/feedbacks">@Html.LocalizationString("menu_settings_feed_backs")</a></li>
-                                <li class="divider"></li>
-                            </ul>
-                        </li>
-                    }
-
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">@Html.LocalizationString("menu_apps") <b class="caret"></b></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">@Html.LocalizationString("menu_domain_object") <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="/app/new">@Html.LocalizationString("menu_apps_new_app")</a></li>
-                            <li><a href="/user/apps">@Html.LocalizationString("menu_apps_apps")</a></li>
+                            <li><a href="/domainobject/new">@Html.LocalizationString("menu_domain_object_new")</a></li>
+                            <li><a href="/domainobject/list">@Html.LocalizationString("menu_domain_object_list")</a></li>
                             <li class="divider"></li>
                         </ul>
                     </li>
                 }
-
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">@Html.LocalizationString("menu_metadatas") <b class="caret"></b></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="/data/new">@Html.LocalizationString("link_metadata_new")</a></li>
-                        <li><a href="/data/list">@Html.LocalizationString("link_metadata_types")</a></li>
-                        <li class="divider"></li>
-                    </ul>
-                </li>
-
             </ul>
             <form class="navbar-form navbar-left"><input type="text" class="form-control col-lg-8" placeholder="@Html.LocalizationString("search")"></form>
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="/lang/change/tr"><img src="/public/img/flag/tr.png" alt="Türkçe" /></a></li>
                 <li><a href="/lang/change/en"><img src="/public/img/flag/en.png" alt="English"></a></li>
-                <li><a href="/home/help">@Html.LocalizationString("menu_help")</a></li>
                 <li><a href="/home/contact">@Html.LocalizationString("menu_contact")</a></li>
 
                 @if (User.Identity.IsAuthenticated)
                 {
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                            <img src="@GravatarHelper.GetGravatarURL(User.Identity.GetEmail(), 25)" alt="@User.Identity.GetFullName()" class="img-circle" />
+                            <img src="@Url.Gravatar(User.Identity.GetEmail(), 25)" alt="@User.Identity.GetFullName()" class="img-circle" />
                             @User.Identity.GetFullName() <b class="caret"></b>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="/user/passwordreset">@Html.LocalizationString("menu_user_reset")</a></li>
+                            <li><a href="/user/passwordreset">@Html.LocalizationString("menu_user_profile")</a></li>
                             <li><a href="/user/logout">@Html.LocalizationString("menu_user_logout")</a></li>
                         </ul>
                     </li>
@@ -99,16 +76,8 @@
                 <div class="modal-body">
                     <div id="wrnFeedback"></div>
                     <form name="frmFeedback" id="frmFeedback">
-                        @if (!User.Identity.IsAuthenticated)
-                        {
-                            <div class="form-group">
-                                <span>@Html.LocalizationString("email")</span>
-                                <input id="FeedbackEmail" name="FeedbackEmail" type="email" class="form-control" />
-                            </div>
-                        }
                         <div class="form-group">
-                            <span>@Html.LocalizationString("feedback")</span>
-                            <textarea id="Feedback" name="Feedback" class="form-control"></textarea>
+                            <textarea id="FeedbackMessage" name="FeedbackMessage" class="form-control" rows="6"></textarea>
                         </div>
                     </form>
                 </div>
@@ -119,9 +88,10 @@
             </div>
         </div>
     </div><!-- /.modal -->
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.11.1/jquery.validate.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.3/js/bootstrap.min.js"></script>
+
+    <script src="//s.setcrm.com/js/jquery.2.1.0.js"></script>
+    <script src="//s.setcrm.com/js/jquery.validate.1.11.1.js"></script>
+    <script src="//s.setcrm.com/js/bootstrap.3.0.3.js"></script>
     <script src="/public/js/app.js?v=2"></script>
     @RenderSection("Script", false)
 </body>
