--- a/sources/set.web/Views/Home/Contact.cshtml
+++ b/sources/set.web/Views/Home/Contact.cshtml
@@ -1,1 +1,27 @@
-﻿
+﻿<div class="container" role="main">
+    <div class="row">
+
+        <div class="col-md-12">
+            <form role="form">
+                
+                <div class="form-group">
+                    <label for="Name">@Html.LocalizationString("name")</label>
+                    <input type="text" class="form-control" id="Name" placeholder="@Html.LocalizationString("full_name")">
+                </div>
+
+                <div class="form-group">
+                    <label for="Email">@Html.LocalizationString("email")</label>
+                    <input type="text" class="form-control" id="Email" placeholder="@Html.LocalizationString("enter_email")">
+                </div>
+
+                <div class="form-group">
+                    <label for="Msg">@Html.LocalizationString("message")</label>
+                    <textarea id="Msg" rows="6" placeholder="@Html.LocalizationString("your_message")" class="form-control"></textarea>
+                </div>
+
+                <button type="submit" class="btn btn-default">@Html.LocalizationString("submit")</button>
+            </form>
+        </div>
+
+    </div>
+</div>
