--- a/sources/set.web/Views/Home/Contact.cshtml
+++ b/sources/set.web/Views/Home/Contact.cshtml
@@ -1,27 +1,57 @@
-﻿<div class="container" role="main">
-    <div class="row">
+﻿@model ContactModel
 
-        <div class="col-md-12">
-            <form id="frm" role="form">
+@{
+    ViewBag.Title = Html.LocalizationString("contact_view_title");
+}
 
-                <div class="form-group">
-                    <label for="Name">@Html.LocalizationString("name")</label>
-                    <input type="text" class="form-control" id="Name" placeholder="@Html.LocalizationString("full_name")" required>
-                </div>
+<div class="row">
+    <h3>@ViewBag.Title</h3>
+    <hr />
+</div>
 
+<div class="row">
+    <div class="col-md-6">
+
+        @Html.Partial("_Msg")
+        
+        @if (!Model.IsOk)
+        {
+            <form id="frm" role="form" method="POST">
+            
                 <div class="form-group">
                     <label for="Email">@Html.LocalizationString("email")</label>
-                    <input type="email" class="form-control" id="Email" placeholder="@Html.LocalizationString("enter_email")" required>
+                    <input id="Email" name="Email" type="email" class="form-control" required value="@Model.Email" />
+                </div>
+            
+                <div class="form-group">
+                    <label for="Subject">@Html.LocalizationString("subject")</label>
+                    <input id="Subject" name="Subject" type="text" class="form-control" required value="@Model.Subject" />
                 </div>
 
                 <div class="form-group">
-                    <label for="Msg">@Html.LocalizationString("message")</label>
-                    <textarea id="Msg" rows="6" placeholder="@Html.LocalizationString("your_message")" class="form-control" required></textarea>
+                    <label for="Message">@Html.LocalizationString("message")</label>
+                    <textarea id="Message" name="Message" rows="6" class="form-control" required>@Model.Message</textarea>
                 </div>
 
-                <button type="submit" class="btn btn-default">@Html.LocalizationString("submit")</button>
+                @Html.AntiForgeryToken()
+
+                <button type="submit" class="btn btn-default">@Html.LocalizationString("btn_send")</button>
             </form>
-        </div>
+        }
+    </div>
+
+    <div class="col-md-6">
+
+        <h3>Lorem ipsum dolor sit amet</h3>
+
+        <address>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </address>
 
     </div>
 </div>
