--- a/sources/set.web/Views/Shared/_Layout.cshtml
+++ b/sources/set.web/Views/Shared/_Layout.cshtml
@@ -58,9 +58,11 @@
         </div><!-- /.nav-collapse -->
     </div>
     <div style="padding: 3px;">
-        <div class="col-lg-12">
+        <div class="col-lg-1"></div>
+        <div class="col-lg-10">
             @RenderBody()
         </div>
+        <div class="col-lg-1"></div>
         <div class="clearfix"></div>
         <footer style="padding: 3px;"><hr /><p>&copy; @DateTime.Now.Year - Argeset Yazılım</p></footer>
     </div>
