--- a/sources/set.web/Views/Home/Contact.cshtml
+++ b/sources/set.web/Views/Home/Contact.cshtml
@@ -25,7 +25,7 @@
             
                 <div class="form-group">
                     <label for="Subject">@Html.LocalizationString("subject")</label>
-                    <input id="Subject" name="Subject" type="text" class="form-control" required value="@Model.Subject" />
+                    <input id="Subject" name="Subject" type="text" class="form-control" value="@Model.Subject" />
                 </div>
 
                 <div class="form-group">
