--- a/sources/set.web/Views/Shared/_Layout.cshtml
+++ b/sources/set.web/Views/Shared/_Layout.cshtml
@@ -79,7 +79,7 @@
                     <div id="wrnFeedback"></div>
                     <form name="frmFeedback" id="frmFeedback">
                         <div class="form-group">
-                            <textarea id="FeedbackMessage" name="FeedbackMessage" class="form-control" rows="6"></textarea>
+                            <textarea id="FeedbackMessage" name="FeedbackMessage" class="form-control" rows="6" required></textarea>
                         </div>
                     </form>
                 </div>
@@ -92,9 +92,9 @@
     </div><!-- /.modal -->
 
     <script src="//s.setcrm.com/js/jquery.2.1.0.js"></script>
-    <script src="//s.setcrm.com/js/jquery.validate.1.11.1.js"></script>
     <script src="//s.setcrm.com/js/bootstrap.3.0.3.js"></script>
     <script src="/public/js/app.js?v=2"></script>
     @RenderSection("Script", false)
+
 </body>
 </html>
