--- a/sources/set.web/Views/Home/Contact.cshtml
+++ b/sources/set.web/Views/Home/Contact.cshtml
@@ -16,7 +16,7 @@
         
         @if (!Model.IsOk)
         {
-            <form id="frm" role="form" method="POST">
+            <form method="POST">
             
                 <div class="form-group">
                     <label for="Email">@Html.LocalizationString("email")</label>
