--- a/sources/set.web/Views/User/Login.cshtml
+++ b/sources/set.web/Views/User/Login.cshtml
@@ -26,6 +26,10 @@
                 
                 <button type="submit" class="btn btn-default">@Html.LocalizationString("btn_login")</button>
                 <a style="margin-left: 10px;" href="/user/reset">@Html.LocalizationString("forgot_your_password")</a>
+            
+                <div class="error">
+                    @Model.Msg
+                </div>
             </form>
 
         </div>
