--- a/sources/set.web/Views/User/Login.cshtml
+++ b/sources/set.web/Views/User/Login.cshtml
@@ -19,7 +19,7 @@
 
                 <div class="form-group">
                     <label for="Password">@Html.LocalizationString("password")</label>
-                    <input type="password" class="form-control" id="Password" required>
+                    <input type="password" id="Password" name="Password" class="form-control" required>
                 </div>
 
                 @Html.AntiForgeryToken()
