UserController and Signup procedures.

--- a/sources/set.web/Views/User/Login.cshtml
+++ b/sources/set.web/Views/User/Login.cshtml
@@ -14,12 +14,12 @@
             <form action="/user/login?ReturnUrl=@Request.QueryString["ReturnUrl"]" method="post">
                 <div class="form-group">
                     <label for="Email">@Html.LocalizationString("email")</label>
-                    <input type="email" id="Email" name="Email" class="form-control" required>
+                    <input type="email" id="Email" name="Email" class="form-control" required />
                 </div>
 
                 <div class="form-group">
                     <label for="Password">@Html.LocalizationString("password")</label>
-                    <input type="password" id="Password" name="Password" class="form-control" required>
+                    <input type="password" id="Password" name="Password" class="form-control" required />
                 </div>
 
                 @Html.AntiForgeryToken()
