--- a/sources/set.web/Views/User/PasswordChange.cshtml
+++ b/sources/set.web/Views/User/PasswordChange.cshtml
@@ -1,32 +1,33 @@
-﻿@model LoginModel
+﻿@model PasswordChangeModel
 
 @{
-    ViewBag.Title = Html.LocalizationString("login_view_title");
+    ViewBag.Title = Html.LocalizationString("password_change_title"); ;
 }
 
-<div class="container" role="main">
-    
+<div>
+
     <div class="row">
         <div class="col-md-5">
             <h3>@ViewBag.Title</h3>
             <hr />
 
-            <form action="/user/login?ReturnUrl=@Request.QueryString["ReturnUrl"]" method="post">
+            <form method="post">
                 <div class="form-group">
                     <label for="Email">@Html.LocalizationString("email")</label>
-                    <input type="email" id="Email" name="Email" class="form-control" required />
+                    <input type="email" id="Email" name="Email" class="form-control" required disabled value="@Model.Email" />
                 </div>
-
+                
                 <div class="form-group">
                     <label for="Password">@Html.LocalizationString("password")</label>
                     <input type="password" id="Password" name="Password" class="form-control" required />
                 </div>
+                
+                <input type="hidden" name="Token" value="@Model.Token" />
 
                 @Html.AntiForgeryToken()
-                
-                <button type="submit" class="btn btn-default">@Html.LocalizationString("btn_login")</button>
-                <a style="margin-left: 10px;" href="/user/passwordreset">@Html.LocalizationString("forgot_your_password")</a>
-            
+
+                <button type="submit" class="btn btn-default">@Html.LocalizationString("btn_save")</button>
+
                 <div class="error">
                     @Model.Msg
                 </div>
