--- a/sources/set.web/Views/User/PasswordReset.cshtml
+++ b/sources/set.web/Views/User/PasswordReset.cshtml
@@ -1,10 +1,10 @@
-﻿@model ResetModel
+﻿@model PasswordResetModel
 
 @{
     ViewBag.Title = Html.LocalizationString("password_reset_title"); ;
 }
 
-<div class="container" role="main">
+<div>
 
     <div class="row">
         <div class="col-md-5">
