--- a/sources/set.web/Views/Shared/_Layout.cshtml
+++ b/sources/set.web/Views/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
                             @User.Identity.GetFullName() <b class="caret"></b>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="/user/passwordreset">@Html.LocalizationString("menu_user_profile")</a></li>
+                            <li><a href="/user/detail">@Html.LocalizationString("menu_user_profile")</a></li>
                             <li><a href="/user/logout">@Html.LocalizationString("menu_user_logout")</a></li>
                         </ul>
                     </li>
