--- a/sources/set.web/Views/User/Detail.cshtml
+++ b/sources/set.web/Views/User/Detail.cshtml
@@ -1,7 +1,7 @@
 ﻿@model UserModel
 
 @{
-    ViewBag.Title = Html.LocalizationString("user_profile_view_title");
+    ViewBag.Title = Html.LocalizationString("user_detail_view_title");
 }
 
 <div class="row">
