--- a/sources/set.web/Views/Shared/_Layout.cshtml
+++ b/sources/set.web/Views/Shared/_Layout.cshtml
@@ -81,6 +81,7 @@
                         <div class="form-group">
                             <textarea id="FeedbackMessage" name="FeedbackMessage" class="form-control" rows="6" required></textarea>
                         </div>
+                        <div id="feedbackReturnMessage"></div>
                     </form>
                 </div>
                 <div class="modal-footer">
