--- a/sources/set.web/Views/User/PasswordReset.cshtml
+++ b/sources/set.web/Views/User/PasswordReset.cshtml
@@ -4,29 +4,28 @@
     ViewBag.Title = Html.LocalizationString("password_reset_title"); ;
 }
 
-<div>
-
-    <div class="row">
-        <div class="col-md-5">
-            <h3>@ViewBag.Title</h3>
-            <hr />
-
-            <form method="post">
-                <div class="form-group">
-                    <label for="Email">@Html.LocalizationString("email")</label>
-                    <input type="email" id="Email" name="Email" class="form-control" required value="@Model.Email" />
-                </div>
-
-                @Html.AntiForgeryToken()
-
-                <button type="submit" class="btn btn-default">@Html.LocalizationString("btn_password_reset")</button>
-
-                <div class="error">
-                    @Model.Msg
-                </div>
-            </form>
-
-        </div>
-    </div>
-
+<div class="row">
+    <h3>@ViewBag.Title</h3>
+    <hr />
 </div>
+
+@Html.Partial("_Msg")
+
+<div class="row">
+    <div class="col-md-5">
+
+        <form method="post">
+            <div class="form-group">
+                <label for="Email">@Html.LocalizationString("email")</label>
+                <input type="email" id="Email" name="Email" class="form-control" required value="@Model.Email" />
+            </div>
+
+            @Html.AntiForgeryToken()
+
+            <button type="submit" class="btn btn-default">@Html.LocalizationString("btn_password_reset")</button>
+
+        </form>
+
+    </div>
+</div>
+
