--- a/sources/set.web/Views/Shared/_Layout.cshtml
+++ b/sources/set.web/Views/Shared/_Layout.cshtml
@@ -27,6 +27,18 @@
                             <li class="divider"></li>
                         </ul>
                     </li>
+
+                    if (User.Identity.GetRoleName() == ConstHelper.Admin)
+                    {
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">@Html.LocalizationString("admin") <b class="caret"></b></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="/admin/users">@Html.LocalizationString("menu_users")</a></li>
+                                <li><a href="/admin/feedbacks">@Html.LocalizationString("menu_feedbacks")</a></li>
+                                <li class="divider"></li>
+                            </ul>
+                        </li>
+                    }
                 }
             </ul>
             <form class="navbar-form navbar-left"><input type="text" class="form-control col-lg-8" placeholder="@Html.LocalizationString("search")"></form>
