--- a/sources/set.web/Views/User/Login.cshtml
+++ b/sources/set.web/Views/User/Login.cshtml
@@ -11,7 +11,7 @@
             <h3>@ViewBag.Title</h3>
             <hr />
 
-            <form action="/user/login?ReturnUrl=@Request.QueryString["ReturnUrl"]" method="post">
+            <form name="frm" id="frm" action="/user/login?ReturnUrl=@Request.QueryString["ReturnUrl"]" method="post">
                 <div class="form-group">
                     <label for="Email">@Html.LocalizationString("email")</label>
                     <input type="email" id="Email" name="Email" class="form-control" required />
