--- a/sources/set.web/Views/User/Login.cshtml
+++ b/sources/set.web/Views/User/Login.cshtml
@@ -14,7 +14,7 @@
 <div class="row">
     <div class="col-md-5">
 
-        <form action="/user/login?ReturnUrl=@Request.QueryString["ReturnUrl"]" method="post">
+        <form id="frm" name="frm" action="/user/login?ReturnUrl=@Request.QueryString["ReturnUrl"]" method="post">
             <div class="form-group">
                 <label for="Email">@Html.LocalizationString("email")</label>
                 <input type="email" id="Email" name="Email" class="form-control" required />
