fixed some small thing

--- a/sources/set.web/Views/User/New.cshtml
+++ b/sources/set.web/Views/User/New.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = Html.LocalizationString("new_user_title");
 }
 
-<div class="container" role="main">
+<div role="main">
 
     <div class="row">
         <div class="col-md-5">
