--- a/sources/set.web/Views/Admin/ContactMessages.cshtml
+++ b/sources/set.web/Views/Admin/ContactMessages.cshtml
@@ -1,7 +1,7 @@
-﻿@model PageModel<DomainObjectModel>
+﻿@model PageModel<ContactMessageModel>
 
 @{
-    ViewBag.Title = Html.LocalizationString("domainobject_listing_title");
+    ViewBag.Title = Html.LocalizationString("contactmessages_listing_title");
 }
 
 <div class="row">
@@ -11,18 +11,24 @@
 
 <div class="row">
 
+    <div class="col-md-12">
+
         <div class="table-responsive">
             <table class="table table-bordered table-hover">
-                <thead style="background: #5BC0DE;">
+                <thead>
                     <tr>
-                        <th>@Html.LocalizationString("name")</th>
+                        <th>@Html.LocalizationString("email")</th>
+                        <th>@Html.LocalizationString("subject")</th>
+                        <th>@Html.LocalizationString("message")</th>
                     </tr>
                 </thead>
                 <tbody id="tbodyModelItems">
                     @foreach (var item in Model.Items)
                     {
                         <tr>
-                            <td>@item.Name</td>
+                            <td>@item.Email</td>
+                            <td>@item.Subject</td>
+                            <td>@item.Message</td>
                         </tr>
                     }
                 </tbody>
@@ -31,7 +37,7 @@
                 @{
                     if (Model.TotalPageCount > 1)
                     {
-                        const string link = "/domainobject/list";
+                        const string link = "/admin/contactmessages";
                         <ul class="pagination">
                             @if (Model.HasPreviousPage)
                             {
@@ -49,5 +55,7 @@
                 }
             </div>
         </div>
+
+    </div>
 
 </div>
