--- a/sources/set.web/Views/Shared/_Layout.cshtml
+++ b/sources/set.web/Views/Shared/_Layout.cshtml
@@ -35,6 +35,7 @@
                             <ul class="dropdown-menu">
                                 <li><a href="/admin/users">@Html.LocalizationString("menu_users")</a></li>
                                 <li><a href="/admin/feedbacks">@Html.LocalizationString("menu_feedbacks")</a></li>
+                                <li><a href="/admin/contactmessages">@Html.LocalizationString("menu_contactmessages")</a></li>
                                 <li class="divider"></li>
                             </ul>
                         </li>
