Button first class name, default to primary.

--- a/sources/set.web/Views/User/Login.cshtml
+++ b/sources/set.web/Views/User/Login.cshtml
@@ -27,7 +27,7 @@
 
             @Html.AntiForgeryToken()
 
-            <button type="submit" class="btn btn-default">@Html.LocalizationString("btn_login")</button>
+            <button type="submit" class="btn btn-primary">@Html.LocalizationString("btn_login")</button>
             <a style="margin-left: 10px;" href="/user/passwordreset">@Html.LocalizationString("forgot_your_password")</a>
 
         </form>
