--- a/sources/set.web/Views/User/New.cshtml
+++ b/sources/set.web/Views/User/New.cshtml
@@ -29,7 +29,7 @@
 
                 @Html.AntiForgeryToken()
 
-                <button type="submit" class="btn btn-default">@Html.LocalizationString("btn_sign_up")</button>
+                <button type="submit" class="btn btn-primary">@Html.LocalizationString("btn_sign_up")</button>
 
                 <div class="error">
                     @Model.Msg
