--- a/sources/set.web/Views/Home/Contact.cshtml
+++ b/sources/set.web/Views/Home/Contact.cshtml
@@ -36,7 +36,7 @@
 
                 @Html.AntiForgeryToken()
 
-                <button type="submit" class="btn btn-default">@Html.LocalizationString("btn_send")</button>
+                <button type="submit" class="btn btn-primary">@Html.LocalizationString("btn_send")</button>
             </form>
         }
     </div>
