--- a/sources/set.web/Views/User/PasswordChange.cshtml
+++ b/sources/set.web/Views/User/PasswordChange.cshtml
@@ -26,7 +26,7 @@
 
                 @Html.AntiForgeryToken()
 
-                <button type="submit" class="btn btn-default">@Html.LocalizationString("btn_save")</button>
+                <button type="submit" class="btn btn-primary">@Html.LocalizationString("btn_save")</button>
 
                 <div class="error">
                     @Model.Msg
