--- a/sources/set.web/Views/User/PasswordReset.cshtml
+++ b/sources/set.web/Views/User/PasswordReset.cshtml
@@ -22,7 +22,7 @@
 
             @Html.AntiForgeryToken()
 
-            <button type="submit" class="btn btn-default">@Html.LocalizationString("btn_password_reset")</button>
+            <button type="submit" class="btn btn-primary">@Html.LocalizationString("btn_send_password_reset_link")</button>
 
         </form>
 
