--- a/sources/set.web/Public/css/app.css
+++ b/sources/set.web/Public/css/app.css
@@ -27,6 +27,11 @@
 }
 
 .nav li a {
-    padding-left:10px;
-    padding-right:10px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.table thead {
+    background: #5BC0DE;
+    font-weight: bold;
 }
