--- a/sources/set.web/Views/Admin/Feedbacks.cshtml
+++ b/sources/set.web/Views/Admin/Feedbacks.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewBag.Title = Html.LocalizationString("feedbacks_listing_title");
+    const string link = "/admin/feedbacks";
 }
 
 <div class="row">
@@ -11,49 +12,50 @@
 
 <div class="row">
 
-    <div class="col-md-12">
-
-        <div class="table-responsive">
-            <table class="table table-bordered table-hover">
-                <thead>
+    <div class="table-responsive">
+        <table class="table table-bordered table-hover">
+            <thead>
+                <tr>
+                    <th>@Html.LocalizationString("email")</th>
+                    <th>@Html.LocalizationString("message")</th>
+                </tr>
+            </thead>
+            <tbody id="tbodyModelItems">
+                @foreach (var item in Model.Items)
+                {
                     <tr>
-                        <th>@Html.LocalizationString("email")</th>
-                        <th>@Html.LocalizationString("message")</th>
+                        <td>@item.Email</td>
+                        <td>@item.Message</td>
                     </tr>
-                </thead>
-                <tbody id="tbodyModelItems">
-                    @foreach (var item in Model.Items)
-                    {
-                        <tr>
-                            <td>@item.Email</td>
-                            <td>@item.Message</td>
-                        </tr>
-                    }
-                </tbody>
-            </table>
-            <div>
-                @{
-                    if (Model.TotalPageCount > 1)
-                    {
-                        const string link = "/admin/feedbacks";
-                        <ul class="pagination">
-                            @if (Model.HasPreviousPage)
-                            {
-                                <li><a id="prevPage" href="@link/@(Model.Number-1)">&laquo;</a></li>
-                            }
-                            <li><a href="@link/@(Model.Number)">@(Model.Number)</a></li>
-                            @if (Model.HasNextPage)
-                            {
-                                <li><a id="nextPage" href="@link/@(Model.Number+1)">&raquo;</a></li>
-                            }
-                        </ul>
-                        <br />
-                        <span class="label label-primary">@Html.LocalizationString("total_page_count") : @Model.TotalPageCount</span>
-                    }
                 }
-            </div>
-        </div>
-
+            </tbody>
+            <tfoot>
+                <tr>
+                    <td>
+                        <div>
+                            @{
+                                if (Model.TotalPageCount > 1)
+                                {
+                                    <ul class="pagination">
+                                        @if (Model.HasPreviousPage)
+                                        {
+                                            <li><a id="prevPage" href="@link/@(Model.Number-1)">&laquo;</a></li>
+                                        }
+                                        <li><a href="@link/@(Model.Number)">@(Model.Number)</a></li>
+                                        @if (Model.HasNextPage)
+                                        {
+                                            <li><a id="nextPage" href="@link/@(Model.Number+1)">&raquo;</a></li>
+                                        }
+                                    </ul>
+                                    <br />
+                                    <span class="label label-primary">@Html.LocalizationString("total_page_count") : @Model.TotalPageCount</span>
+                                }
+                            }
+                        </div>
+                    </td>
+                </tr>
+            </tfoot>
+        </table>
     </div>
 
 </div>
