--- a/sources/set.web/Views/Admin/Users.cshtml
+++ b/sources/set.web/Views/Admin/Users.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewBag.Title = Html.LocalizationString("all_users_title");
+    const string link = "/admin/users";
 }
 
 <div class="row">
@@ -35,34 +36,38 @@
                         </td>
                         <td>@item.Name</td>
                         <td>@item.Email</td>
-                        <td><a href="/admin/users/@item.RoleId">@item.RoleName</a></td>
+                        <td><a href="@link/@item.RoleId">@item.RoleName</a></td>
                     </tr>
                 }
-                @{
-                    if (Model.HasNextPage || Model.HasPreviousPage)
-                    {
-                        <tr>
-                            <td colspan="4" align="center">
-                                <ul class="pagination">
-                                    @if (Model.HasPreviousPage)
-                                    {
-                                        <li><a href="~/admin/users/@ViewBag.RoleId?page=@(Model.Number-1)">&laquo;</a></li>
-                                    }
-
-                                    <li><a href="~/admin/users/@ViewBag.RoleId?page=@(Model.Number)">@(Model.Number)</a></li>
-
-                                    @if (Model.HasNextPage)
-                                    {
-                                        <li><a href="~/admin/users/@ViewBag.RoleId?page=@(Model.Number+1)">&raquo;</a></li>
-                                    }
-                                </ul>
-                                <br />
-                                <span class="label label-primary">@Html.LocalizationString("total_page_count") : @Model.TotalPageCount</span>
-                            </td>
-                        </tr>
-                    }
-                }
             </tbody>
+            <tfoot>
+                <tr>
+                    <td>
+                        <div>
+                            @{
+                                if (Model.HasNextPage || Model.HasPreviousPage)
+                                {
+                                    <ul class="pagination">
+                                        @if (Model.HasPreviousPage)
+                                        {
+                                            <li><a href="@link/@ViewBag.RoleId?page=@(Model.Number-1)">&laquo;</a></li>
+                                        }
+
+                                        <li><a href="@link/@ViewBag.RoleId?page=@(Model.Number)">@(Model.Number)</a></li>
+
+                                        @if (Model.HasNextPage)
+                                        {
+                                            <li><a href="@link/@ViewBag.RoleId?page=@(Model.Number+1)">&raquo;</a></li>
+                                        }
+                                    </ul>
+                                    <br />
+                                    <span class="label label-primary">@Html.LocalizationString("total_page_count") : @Model.TotalPageCount</span>
+                                }
+                            }
+                        </div>
+                    </td>
+                </tr>
+            </tfoot>
         </table>
         @Html.AntiForgeryToken()
     </div>
