home index updated

--- a/sources/set.web/Views/Home/Index.cshtml
+++ b/sources/set.web/Views/Home/Index.cshtml
@@ -7,3 +7,10 @@
     cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
     proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 </p>
+<hr />
+<p>
+    you may want to add a new domain object!
+    <br />
+    <br />
+    <a href="/domainobject/new" class="btn btn-primary">Add New Domain Object</a>
+</p>
