Password reset operations.

--- a/sources/set.web/Views/User/PasswordChange.cshtml
+++ b/sources/set.web/Views/User/PasswordChange.cshtml
@@ -4,36 +4,30 @@
     ViewBag.Title = Html.LocalizationString("password_change_title"); ;
 }
 
-<div>
+<div class="row">
+    <h3>@ViewBag.Title</h3>
+    <hr />
+</div>
 
-    <div class="row">
-        <div class="col-md-5">
-            <h3>@ViewBag.Title</h3>
-            <hr />
+@Html.Partial("_Msg")
 
-            <form method="post">
-                <div class="form-group">
-                    <label for="Email">@Html.LocalizationString("email")</label>
-                    <input type="email" id="Email" name="Email" class="form-control" required disabled value="@Model.Email" />
-                </div>
-                
-                <div class="form-group">
-                    <label for="Password">@Html.LocalizationString("password")</label>
-                    <input type="password" id="Password" name="Password" class="form-control" required />
-                </div>
-                
-                <input type="hidden" name="Token" value="@Model.Token" />
+<div class="row">
+    <div class="col-md-5">
 
-                @Html.AntiForgeryToken()
+        <form method="post">
 
-                <button type="submit" class="btn btn-primary">@Html.LocalizationString("btn_save")</button>
+            <div class="form-group">
+                <label for="Password">@Html.LocalizationString("new_password")</label>
+                <input type="password" id="Password" name="Password" class="form-control" required />
+            </div>
 
-                <div class="error">
-                    @Model.Msg
-                </div>
-            </form>
+            <input type="hidden" name="Token" value="@Model.Token" />
 
-        </div>
+            @Html.AntiForgeryToken()
+
+            <button type="submit" class="btn btn-primary">@Html.LocalizationString("btn_save")</button>
+
+        </form>
+
     </div>
-
 </div>
